recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:10: error: value ∕ is not a member of Double
		sierpinski(level-1, (length)∕2)
                                            ^