recursion.lessons.recursion.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
	if (level == 0){
		for ( i<- 1 to 3){
			avance(length)
			droite(120)
		}
	}
	else {
		sierpinski(level-1, (length)/2)
		avance(length/2)
		sierpinski(level-1, (length)∕2)
	}
}
